--- a/fe/src/styles/font-face-nanum.css
+++ b/fe/src/styles/font-face-nanum.css
@@ -1,28 +1,28 @@
 @charset "utf-8";
 
 @font-face {
-  font-family: NanumSquareRoundRegular, sans-serif;
+  font-family: NanumSquareRoundRegular;
   src: url("~@/fonts/NanumSquareRoundR.woff2") format("woff2"),
        url("~@/fonts/NanumSquareRoundR.woff") format("woff"),
        url("~@/fonts/NanumSquareRoundR.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: NanumSquareRoundLight, sans-serif;
+  font-family: NanumSquareRoundLight;
   src: url("~@/fonts/NanumSquareRoundL.woff2") format("woff2"),
        url("~@/fonts/NanumSquareRoundL.woff") format("woff"),
        url("~@/fonts/NanumSquareRoundL.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: NanumSquareRoundBold, sans-serif;
+  font-family: NanumSquareRoundBold;
   src: url("~@/fonts/NanumSquareRoundB.woff2") format("woff2"),
        url("~@/fonts/NanumSquareRoundB.woff") format("woff"),
        url("~@/fonts/NanumSquareRoundB.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: NanumSquareRoundExtraBold, sans-serif;
+  font-family: NanumSquareRoundExtraBold;
   src: url("~@/fonts/NanumSquareRoundEB.woff2") format("woff2"),
        url("~@/fonts/NanumSquareRoundEB.woff") format("woff"),
        url("~@/fonts/NanumSquareRoundEB.ttf") format("truetype");
