Implement page: MainAdminGroupsEdit

--- a/fe/src/plugins/vuetify.scss
+++ b/fe/src/plugins/vuetify.scss
@@ -4,6 +4,7 @@
   // When printing in Korean,
   // Fixed the issue where the top of the text was slightly cut off.
   margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 //.v-text-field.v-text-field--enclosed {
